# mcp_gateway_thesis

./: baseline_client.py  baseline_server.py  benchmark_suite.py  dashboard.py  database.py  docker-compose.yml  gateway_policies.db  gateway_policies.db-shm  gateway_policies.db-wal  generate_chart.py  load_test.py  main.py  mcp_gateway.py  prometheus.yml  pyproject.toml  requirements.txt  seed_db.py  test_gateway.py  thesis_benchmark_results.csv  update_db.py
.github/workflows/: ci.yml
