[project]
name = "mcp-gateway-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langchain-mcp-adapters>=0.3.0",
    "mcp[cli]>=1.28.1",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]
